test impl for collecting variables from order entry